--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <script src="https://kit.fontawesome.com/5821819f0c.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Solid</title>
+    <svg class="hidden">
+        <filter id="glass-distortion">
+          <feTurbulence type="turbulence" baseFrequency="0.008" numOctaves="2" result="noise" />
+          <feDisplacementMap in="SourceGraphic" in2="noise" scale="77" />
+        </filter>
+      </svg>
   </head>
   <body>
     <div id="root"></div>
