--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/logo.png" />
     <script src="https://kit.fontawesome.com/5821819f0c.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Solid</title>
+    <title>Mine de sel</title>
     <svg class="hidden">
         <filter id="glass-distortion">
           <feTurbulence type="turbulence" baseFrequency="0.008" numOctaves="2" result="noise" />
